--- a/amicusairports-landing.html
+++ b/amicusairports-landing.html
@@ -45,6 +45,40 @@
             font-weight: 600;
             font-size: 0.9rem;
         }
+        .icon-link {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            padding: 10px 16px;
+            border: 1px solid #0ea5a4;
+            border-radius: 999px;
+            color: #0ea5a4;
+            font-weight: 600;
+            text-decoration: none;
+            transition: all 0.2s ease;
+        }
+        .icon-link .icon-circle {
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            background: #0ea5a4;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.1rem;
+        }
+        .icon-link:hover {
+            background: #0ea5a4;
+            color: #fff;
+            text-decoration: none;
+            box-shadow: 0 10px 24px rgba(14, 165, 164, 0.25);
+            transform: translateY(-1px);
+        }
+        .icon-link:hover .icon-circle {
+            background: #fff;
+            color: #0ea5a4;
+        }
     </style>
 </head>
 <body>
@@ -148,6 +182,24 @@
                             </div>
                         </div>
                         <p class="small text-muted mb-0">Export-ready reporting for GHG Protocol and CDP with evidence storage.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="ftco-section" style="padding-top: 0;">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-9 text-center">
+                    <span class="subheading">Connected Carbon Intelligence</span>
+                    <h3 class="mb-3">Airport Passenger Journey Insights</h3>
+                    <p class="text-muted mb-0">We provide internet-enabled carbon intelligence for airport passenger journeys, designed to plug directly into existing airport connectivity infrastructure.</p>
+                    <div class="mt-3">
+                        <a class="icon-link" href="amicuscarbon-landing.html" aria-label="Open Connected Carbon Intelligence landing page">
+                            <span class="icon-circle"><span class="ion-ios-analytics"></span></span>
+                            <span>Explore Carbon Intelligence</span>
+                        </a>
                     </div>
                 </div>
             </div>
