Update links and layout tweaks

--- a/index.html
+++ b/index.html
@@ -112,75 +112,9 @@
   });
 </script>
 
-    <section class="ftco-section ftco-no-pb ftco-no-pt">
-    	<div class="container">
-    		<div class="row justify-content-center pb-0 pb-mb-5 pt-5 pt-md-0">
-          <div class="col-md-12 heading-section ftco-animate">
-          	<span class="subheading">Explore Sustainable Stays</span>
-            <h2 class="mb-4">Where do you want to go?</h2>
-            <p>Discover dream destinations and sustainable stays that balance, comfort, cost, and climate-friendly travel.</p>
-          </div>
-        </div>
-	    	<div class="row">
-					<div class="col-md-12">
-						<div class="search-wrap-1 ftco-animate p-4">
-							<form action="#" class="search-property-1">
-		        		<div class="row">
-		        			<div class="col-lg align-items-end">
-		        				<div class="form-group">
-		        					<label for="#">Destination</label>
-		          				<div class="form-field">
-									<div class="icon"><span class="ion-ios-search"></span></div>
-									<input id="search_destination" type="text" class="form-control" placeholder="Search place">
-				              </div>
-			              </div>
-		        			</div>
-		        			<div class="col-lg align-items-end">
-		        				<div class="form-group">
-		        					<label for="#">Price Limit</label>
-		        					<div class="form-field">
-		          					<div class="select-wrap">
-		                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-		                      <select name="price_limit" id="price_limit" class="form-control">
-		                        <option value="">Any Price</option>
-		                        <option value="100">Up to $100</option>
-		                        <option value="200">Up to $200</option>
-		                        <option value="300">Up to $300</option>
-		                        <option value="500">Up to $500</option>
-		                        <option value="1000">Up to $1,000</option>
-		                       </select>
-		                    </div>
-				              </div>
-			              </div>
-		        			</div>
-							<div class="col-lg align-items-end">
-								<div class="form-group">
-									<label for="leed_only">LEED certification</label>
-									<div class="form-field" style="display:flex;align-items:center;gap:8px">
-										<input type="checkbox" id="leed_only" name="leed_only" value="1" style="width:18px;height:18px;margin:0" />
-										<label for="leed_only" class="small" style="margin:0">Show LEED-certified hotels only</label>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg align-self-end">
-								<div class="form-group">
-									<div class="form-field">
-										<input type="submit" value="Search" class="form-control btn btn-primary">
-									</div>
-								</div>
-							</div>
-		        		</div>
-		        	</form>
-		        	<!-- Search results will render here -->
-		        	<div class="col-md-12 mt-4" id="searchResults"></div>
-		        </div>
-					</div>
-	    	</div>
-	    </div>
-    </section>
 		
 		<section class="ftco-counter img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
-	    <div class="container">
+	    <div class="container-fluid px-0">
 	    	<div class="row no-gutters d-flex">
 	    		<div class="col-md-6 col-lg-5 d-flex">
 	    			<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about.jpg);">
@@ -931,11 +865,11 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Experience</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Adventure</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Hotel and Restaurant</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Beach</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Nature</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Camping</a></li>
+				<li><a href="amicustransport-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTransport</a></li>
+				<li><a href="amicustravel-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTravel</a></li>
+				<li><a href="amicusc02-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusCarbon</a></li>
+				<li><a href="amicusnotary-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusNotary</a></li>
+				<li><a href="amicuscarbon-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusAirport</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Party</a></li>
               </ul>
             </div>
@@ -945,7 +879,7 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">PO Box 426014, San Francisco, CA 94142</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
 	              </ul>
@@ -956,9 +890,7 @@
         <div class="row">
           <div class="col-md-12 text-center">
 	
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+			<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | AmicuServices LLC.</p>
           </div>
         </div>
       </div>
