--- a/amicusairports-landing.html
+++ b/amicusairports-landing.html
@@ -196,7 +196,7 @@
                     <h3 class="mb-3">Airport Passenger Journey Insights</h3>
                     <p class="text-muted mb-0">We provide internet-enabled carbon intelligence for airport passenger journeys, designed to plug directly into existing airport connectivity infrastructure.</p>
                     <div class="mt-3">
-                        <a class="icon-link" href="amicuscarbon-landing.html" aria-label="Open Connected Carbon Intelligence landing page">
+                        <a class="icon-link" href="amicusc02-landing.html" aria-label="Open Connected Carbon Intelligence landing page">
                             <span class="icon-circle"><span class="ion-ios-analytics"></span></span>
                             <span>Explore Carbon Intelligence</span>
                         </a>
