--- a/single.html
+++ b/single.html
@@ -322,10 +322,10 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Experience</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Adventure</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Hotel and Restaurant</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Beach</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Nature</a></li>
+                <li><a href="amicustransport-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTransport</a></li>
+                <li><a href="amicustravel-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTravel</a></li>
+                <li><a href="amicusc02-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusCarbon</a></li>
+                <li><a href="amicusnotary-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusNotary</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Camping</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Party</a></li>
               </ul>
