Update landing headings and footer

--- a/amicusc02-landing.html
+++ b/amicusc02-landing.html
@@ -72,7 +72,7 @@
 
                     <div class="ftco-services-2">
                         <div class="services mb-4">
-                            <h3 class="heading mb-3">Understand Your Carbon Footprint</h3>
+                            <h3 class="heading mb-3 text-center">Understand Your Carbon Footprint</h3>
                             <p>AmicusServices empowers small hotels, ecolodges, and luxury resorts to measure, track, report, and reduce their environmental impacts across the entire operational chain. We simplify sustainability by providing clear, accessible carbon-usage snapshots (CO₂) that help hosts optimize performance, improve efficiency, and lower long-term operating costs.</p>
                         </div>
 
@@ -81,38 +81,44 @@
                             <p class="text-muted mt-3">Get a free carbon estimate Today!</p>
                         </div>
 
-                        <div class="services mb-4">
-                            <h4 class="heading mb-2">Our Services Include:</h4>
-                            <ul class="list-unstyled">
-                                <li class="mb-2">✓ Comprehensive LCA analysis</li>
-                                <li class="mb-2">✓ Scope 1, 2, and 3 emissions tracking</li>
-                                <li class="mb-2">✓ Industry benchmarking reports</li>
-                                <li class="mb-2">✓ Carbon reduction roadmap planning</li>
-                                <li class="mb-2">✓ ESG reporting support</li>
-                                <li class="mb-2">✓ Sustainability certification preparation</li>
-                            </ul>
-                        </div>
-
-                        <div class="services mb-4">
-                            <h4 class="heading mb-2">For Hotels & Hospitality:</h4>
-                            <ul class="list-unstyled">
-                                <li class="mb-2">✓ Guest stay carbon impact analysis</li>
-                                <li class="mb-2">✓ Energy efficiency optimization</li>
-                                <li class="mb-2">✓ Waste reduction strategies</li>
-                                <li class="mb-2">✓ Supply chain sustainability assessment</li>
-                                <li class="mb-2">✓ Green certification pathways</li>
-                            </ul>
-                        </div>
-
-                        <div class="services mb-4">
-                            <h4 class="heading mb-2">Why Partner with AmicusC02?</h4>
-                            <ul class="list-unstyled">
-                                <li class="mb-2">✓ Basic emissions reporting for your business</li>
-                                <li class="mb-2">✓ Easy-to-understand carbon footprint reports</li>
-                                <li class="mb-2">✓ Clear breakdown of emissions sources</li>
-                                <li class="mb-2">✓ Actionable recommendations for reduction</li>
-                                <li class="mb-2">✓ Affordable pricing for all businesses</li>
-                            </ul>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="services mb-4">
+                                    <h4 class="heading mb-2">Our Services Include:</h4>
+                                    <ul class="list-unstyled">
+                                        <li class="mb-2">✓ Comprehensive LCA analysis</li>
+                                        <li class="mb-2">✓ Scope 1, 2, and 3 emissions tracking</li>
+                                        <li class="mb-2">✓ Industry benchmarking reports</li>
+                                        <li class="mb-2">✓ Carbon reduction roadmap planning</li>
+                                        <li class="mb-2">✓ ESG reporting support</li>
+                                        <li class="mb-2">✓ Sustainability certification preparation</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="services mb-4">
+                                    <h4 class="heading mb-2">For Hotels & Hospitality:</h4>
+                                    <ul class="list-unstyled">
+                                        <li class="mb-2">✓ Guest stay carbon impact analysis</li>
+                                        <li class="mb-2">✓ Energy efficiency optimization</li>
+                                        <li class="mb-2">✓ Waste reduction strategies</li>
+                                        <li class="mb-2">✓ Supply chain sustainability assessment</li>
+                                        <li class="mb-2">✓ Green certification pathways</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="services mb-4">
+                                    <h4 class="heading mb-2">Why Partner with AmicusC02?</h4>
+                                    <ul class="list-unstyled">
+                                        <li class="mb-2">✓ Basic emissions reporting for your business</li>
+                                        <li class="mb-2">✓ Easy-to-understand carbon footprint reports</li>
+                                        <li class="mb-2">✓ Clear breakdown of emissions sources</li>
+                                        <li class="mb-2">✓ Actionable recommendations for reduction</li>
+                                        <li class="mb-2">✓ Affordable pricing for all businesses</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="services mb-4">
