--- a/amicusnotary-landing.html
+++ b/amicusnotary-landing.html
@@ -72,7 +72,7 @@
 
                     <div class="ftco-services-2">
                         <div class="services mb-4">
-                            <h3 class="heading mb-3">Professional Travel Document Notarization</h3>
+                            <h3 class="heading mb-3 text-center">Professional Travel Document Notarization</h3>
                             <p>Need your travel documents notarized? AmicusNotary provides quick, reliable notarization services specifically designed for travelers. A notary will verify and authenticate your travel documents for international trips, visa applications, passport renewals, and more.</p>
                         </div>
 
