--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 					<div class="col-md-9 text-center">
 						<h2>Hotels+Resorts+Villas</h2>
 						<p>We can manage your dream building A small river named Duden flows by their place</p>
-						<p class="mb-0"><a href="#" class="btn btn-white px-4 py-3">Book a room now</a></p>
+						<p class="mb-0"><a href="hotel.html" class="btn btn-white px-4 py-3">Book a room now</a></p>
 					</div>
 				</div>
 			</div>
@@ -863,14 +863,13 @@
           </div>
           <div class="col-md">
              <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Experience</h2>
+			  <h2 class="ftco-heading-2">Business Services</h2>
               <ul class="list-unstyled">
 				<li><a href="amicustransport-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTransport</a></li>
 				<li><a href="amicustravel-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTravel</a></li>
 				<li><a href="amicusc02-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusCarbon</a></li>
 				<li><a href="amicusnotary-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusNotary</a></li>
 				<li><a href="amicuscarbon-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusAirport</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Party</a></li>
               </ul>
             </div>
           </div>
